# RMC-Code-20-21

./: .gitignore  .gitmodules  README.md  track_pos.py
C++/: robotcontrollerclient.tar
C++/Phoenix-Linux-SocketCAN-Example-master/: CMakeLists.txt  CMakeLists.txt.dist
C++/PowerDistributionPanel/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
C++/PowerDistributionPanel/include/: PowerDistributionPanel.hpp
C++/PowerDistributionPanel/src/: PowerDistributionPanel.cpp  reader.cpp
C++/camera/: CMakeLists.txt
C++/camera/source/: .camera.cpp.swp  camera.cpp
C++/control.bender/: CMakeLists.txt  Makefile  cmake_install.cmake
C++/control.bender/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
C++/control.bender/include/: InfoItem.hpp
C++/control.bender/src/: InfoItem.cpp  control.cpp
C++/positionTrackingSansGraphics/: CMakeLists.txt
C++/positionTrackingSansGraphics/src/: main.cpp
C++/positionalTracking/cpp/src/: main.cpp
C++/robotcontrollerclient/: CMakeLists.txt
C++/robotcontrollerclient/include/: InfoFrame.hpp
C++/robotcontrollerclient/src/: InfoFrame.cpp  InfoItem.cpp  control.cpp
C++/talon/: CMakeLists.txt  talon.cpp  talon.cpp.orig
C++/talon/bin-same/: talon
C++/talon/bin2/: talon
C++/zed-aruco-master/mono/src/: main.cpp
C++/zed-mono-SansGraphics/src/: main.cpp
C/serial/: .serial_write.cpp.swo  serial_read  serial_read.cpp  serial_write  serial_write.cpp
C/socketcam/: address_sniffer  address_sniffer.c  pdp_reader  pdp_reader.c  test  test.c  writer  writer.c
C/test/: a.out  test.c
ROS/bender/: launch_file  launch_file.old
ROS/bender/build_isolated/communication/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
ROS/bender/build_isolated/logic/: CMakeCache.txt  CTestTestfile.cmake  Makefile
ROS/bender/build_isolated/messages/: CTestTestfile.cmake  Makefile
ROS/bender/build_isolated/power_distribution_panel/: CMakeCache.txt  CTestTestfile.cmake
ROS/bender/build_isolated/publisher_test/: CTestTestfile.cmake  cmake_install.cmake
ROS/bender/build_isolated/subscriber_test/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
ROS/bender/build_isolated/talon/: CMakeCache.txt  Makefile
ROS/bender/devel/: .catkin  .rosinstall  setup.sh
ROS/bender/devel_isolated/: env.sh  setup.sh  setup.zsh
ROS/bender/devel_isolated/communication/: .catkin
ROS/bender/devel_isolated/logic/: .catkin  .rosinstall
ROS/bender/devel_isolated/messages/: _setup_util.py
ROS/bender/devel_isolated/publisher_test/: .catkin
ROS/bender/devel_isolated/talon/: .catkin  setup.sh
ROS/bender/install/: .rosinstall
ROS/bender/src/communication/: CMakeLists.txt
ROS/bender/src/messages/: CMakeLists.txt  package.xml
ROS/bender/src/scoop_drum/: CMakeLists.txt  package.xml
ROS/bender/src/talon/: CMakeLists.txt
ROS/bender/src/victor/: package.xml
ROS/skinny/: launch_file
ROS/skinny/build_isolated/: catkin_make_isolated.cache
ROS/skinny/build_isolated/communication/: Makefile
ROS/skinny/build_isolated/logic/: cmake_install.cmake
ROS/skinny/build_isolated/messages/: CMakeCache.txt  cmake_install.cmake
ROS/skinny/build_isolated/power_distribution_panel/: Makefile  cmake_install.cmake
ROS/skinny/build_isolated/publisher_test/: CMakeCache.txt  Makefile  publisher_test
ROS/skinny/build_isolated/subscriber_test/: Makefile  subscriber_test
ROS/skinny/build_isolated/talon/: CTestTestfile.cmake  cmake_install.cmake
ROS/skinny/devel/: .catkin
ROS/skinny/devel_isolated/: setup.bash
ROS/skinny/devel_isolated/communication/: .rosinstall  setup.sh
ROS/skinny/devel_isolated/logic/: setup.sh
ROS/skinny/devel_isolated/messages/: .catkin  .rosinstall  setup.sh
ROS/skinny/devel_isolated/power_distribution_panel/: .catkin  .rosinstall  setup.sh
ROS/skinny/devel_isolated/publisher_test/: .rosinstall  setup.sh
ROS/skinny/devel_isolated/subscriber_test/: .catkin  .rosinstall  setup.sh
ROS/skinny/devel_isolated/talon/: .rosinstall
ROS/skinny/install/: setup.sh
ROS/skinny/log/: latest_build
ROS/skinny/src/camera/: CMakeLists.txt  package.xml
ROS/skinny/src/communication/: package.xml
ROS/skinny/src/logic/: CMakeLists.txt
ROS/skinny/src/messages/: CMakeLists.txt
ROS/skinny/src/power_distribution_panel/: CMakeLists.txt
ROS/skinny/src_does_not_compile/talon/: package.xml
ROS/skinny/src_does_not_compile/victor/: CMakeLists.txt
ROS/test/src/publisher_test/: CMakeLists.txt  package.xml
ROS/test/src/subscriber_test/: CMakeLists.txt
ROS2/skinny/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/skinny/install/autonomy/share/autonomy/: local_setup.sh  package.bash  package.sh  package.xml
ROS2/skinny/install/logic/share/logic/: local_setup.sh  package.bash  package.sh  package.xml
ROS2/skinny/install/logic/share/logic/cmake/: logicConfig.cmake
ROS2/skinny/install/test_image_generator/share/test_image_generator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/skinny/launch/: launch.py  launch_comm.py  launch_excav.py  launch_logic.py  launch_pdp.py  launch_talon.py  launch_zed_tracking.py  newLaunch.py
ROS2/skinny/log/: latest_build
ROS2/skinny/src/autonomy/: CMakeLists.txt
ROS2/skinny/src/logic/: CMakeLists.txt
ROS2/skinny/src/logic/include/logic/: Automation.hold  Automation.hpp  Automation1.hold  Automation1.hpp  AutomationTypes.hpp
ROS2/skinny/src/logic/src/: Automation.cpp  Automation1.cpp  logic_node.cpp
ROS2/skinny/src/logic/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ROS2/skinny/src/logic/src/log/: latest_build
ROS2/skinny/src/power_distribution_panel/: CMakeLists.txt
ROS2/skinny/src/power_distribution_panel/src/: PowerDistributionPanel.cpp  power_distribution_panel_node.cpp
ROS2/skinny/src/zed_tracking/: CMakeLists.txt
ROS2/skinny/src/zed_tracking/src/: zed_tracking_node.cpp
ROS2/skinny/src/zed_tracking/src/install/: local_setup.sh  setup.sh  setup.zsh
ROS2/skinny/src/zed_tracking/src/log/: latest_build
orb_slam2/devel/: .catkin  _setup_util.py
(+630 files in other folders)
