<?xml version="1.0"?>
<package format="3">
  <name>autonomy</name>
  <version>0.0.0</version>
  <description>Autonomous movement</description>
  <maintainer email="andrewburroughs17@gmail.com">William Burroughs</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>messages</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
